# fish-py

./: Dockerfile  README.md  pyproject.toml
LB/: Dockerfile  default.conf
src/fish_py/: main.py
src/fish_py/model/: knn.pkl  lr.pkl
src/fish_py/utils/: util.py
